--- a/books.html
+++ b/books.html
@@ -13,39 +13,102 @@
     <script type="module">
       import { navbar } from "./components/navbar.js";
       import { loader } from "./components/loader.js";
+      import { footer } from "./components/footer.js";
 
       let header = document.getElementById("navbar");
       header.innerHTML = navbar();
 
       let loaderComponent = document.querySelector(".loader_wrapper");
       loaderComponent.innerHTML = loader();
+
+      let footerComponent = document.getElementById("footer");
+      footerComponent.innerHTML = footer();
     </script>
   </head>
   <body onload="activeTab()">
     <section class="loader_wrapper"></section>
     <header id="navbar"></header>
     <section class="banner">
-      <img style="aspect-ratio: 3/1;" src="assets/images/books_banner.jpg" alt="banner">
+      <img
+        style="aspect-ratio: 3/1"
+        src="assets/images/books_banner.jpg"
+        alt="banner"
+      />
     </section>
 
     <section>
       <div class="one">
         <h1>Books</h1>
       </div>
-      <div class="three">
-        <h1>Badla</h1>
-      </div>
-      <iframe allowfullscreen="allowfullscreen" scrolling="no" class="fp-iframe" src="https://heyzine.com/flip-book/c50f9bc476.html" style="border: 1px solid lightgray; width: 80%; height: 600px; margin-left: 10%;"></iframe>
-      <div class="three">
-        <h1>102 Not Out</h1>
-      </div>
-      <iframe allowfullscreen="allowfullscreen" scrolling="no" class="fp-iframe" src="https://heyzine.com/flip-book/12f4390aa3.html" style="border: 1px solid lightgray; width: 80%; height: 600px; margin-left: 10%;"></iframe>
+      <main class="page-content">
+        <div class="card">
+          <div class="content">
+            <h2 class="title">Badal</h2>
+            <p class="copy">
+              वह मूर्ख होता है जोह सिर्फ सच को ही जानता है ...<br />
+              और सच और झूठ के फर्क को नहीं जानता है
+            </p>
+            <a href="/book-details.html?id=1" class="btn">Read Book</a>
+          </div>
+        </div>
+        <div class="card">
+          <div class="content">
+            <h2 class="title">102 Not Out</h2>
+            <p class="copy">
+              जीवन एक तोहफा है। मृत्यु को देखकर उसका अवमूल्यन नहीं करना चाहिए।
+            </p>
+            <a href="/book-details.html?id=2" class="btn">Read Book</a>
+          </div>
+        </div>
+        <div class="card">
+          <div class="content">
+            <h2 class="title">KBC - I</h2>
+            <p class="copy">It's the desert you've always dreamed of</p>
+            <a href="/book-details.html?id=3" class="btn">Read Book</a>
+          </div>
+        </div>
+        <div class="card">
+          <div class="content">
+            <h2 class="title">77th B'day Celebration</h2>
+            <p class="copy">
+              Seriously, straight up, just blast off into outer space today
+            </p>
+            <a href="/book-details.html?id=4" class="btn">Read Book</a>
+          </div>
+        </div>
+        <div class="card">
+          <div class="content">
+            <h2 class="title">Gulabo Sitabo</h2>
+            <p class="copy">
+              Check out all of these gorgeous mountain trips with beautiful
+              views of, you guessed it, the mountains
+            </p>
+            <a href="/book-details.html?id=5" class="btn">Read Book</a>
+          </div>
+        </div>
+        <div class="card">
+          <div class="content">
+            <h2 class="title">KBC - II</h2>
+            <p class="copy">
+              Plan your next beach trip with these fabulous destinations
+            </p>
+            <a href="/book-details.html?id=6" class="btn">Read Book</a>
+          </div>
+        </div>
+        <div class="card">
+          <div class="content">
+            <h2 class="title">Jhund</h2>
+            <p class="copy">It's the desert you've always dreamed of</p>
+            <a href="/book-details.html?id=7" class="btn">Read Book</a>
+          </div>
+        </div>
+      </main>
     </section>
+    <footer id="footer"></footer>
     <script
       src="https://kit.fontawesome.com/2f354f7b13.js"
       crossorigin="anonymous"
     ></script>
     <script src="scripts/script.js"></script>
-    <script src="scripts/books.js"></script>
   </body>
 </html>
