press home page added

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
   <body onload="activeTab()">
     <section class="loader_wrapper"></section>
     <header id="navbar"></header>
-    <section class="banner">
+    <!-- <section class="banner">
       <div class="word">
         <span>V</span>
         <span>I</span>
@@ -36,6 +36,66 @@
         <span>A</span>
         <span>S</span>
       </div>
+    </section> -->
+    <section class="about">
+      <div class="top">
+        <h2>
+          Vikas Bansal was born in Bijnor & completed his +2 from GIC. He had a
+          dream to build an empire of his own and set out to learn the tricks of
+          the trade. His first stop was Mechanical engineering, where he dwelled
+          deep into the subject and came out on the other side as a Hardcore
+          Production Personnel at UP Organics Ltd. Having said that, he never let
+          his hardworking nature come in the way of his dreams. Having been an
+          ardent Amitabh Bachchan fan from an early age, he soon became a proud-
+          member & co-founder of the ABEF team. Ever since, Vikas has come a long
+          way to meet his hero.
+        </h2>
+        
+          <img src="assets/images/mr_bansal.png" alt="Vikas Bansal">
+        
+      </div>
+      <p>
+        Chasing his dreams since 1996, Vikas spent the first 22 years struggling
+        to just get a glimpse of his hero. Little did he know, there would come
+        a point in his life when Mr. Bachchan himself would call and greet Vikas
+        on stage to read out various poems written by him on varied cultural
+        platforms.
+      </p>
+
+      <br />
+      <p>
+        With a dream to create a legacy of his own, Vikas Bansal stepped out as
+        a Mechanical Engineer handling production at UP Organics Ltd. It was in
+        the year 1998 when he ventured into Marketing and started to build a
+        business plan for his 'idea'. Who was to guess that this career choice
+        was going to bring him closer to his future business partner, who would
+        also turn out to be his best friend.
+      </p>
+      <h2>
+        AS OF 2022, VIKAS BANSAL BOASTS THE FOLLOWING CREDENTIALS TO HIS NAME:
+      </h2>
+      <li>
+         CEO, Euro Pratik Ispat Pvt Ltd: A Company with a 700 Cr Turnover
+      </li>
+      <li>
+         Managing Director, Vyom Power Pvt Ltd: A company with an installed
+        capacity of 5MV & 10MV & expected to grow to 10 MV by May 2020
+      </li>
+      <li>
+         Founder at Prakriti - An e-mobility company looking to help give the
+        public a means to contribute to the environment.
+      </li>
+      <li> MD Minsource International</li>
+      <li> MD B.S. Spring-O-Tech</li>
+      <li> At present he is onboard as a Director</li>
+      <h3>in Moonwalk Infrastructure Pvt Ltd. And NAD Pvt Ltd.</h3>
+      <p>
+        The first offering by his latest project, Prakriti E-Mobility is Evera
+        Cabs. A fast-growing app based taxi service designed to offer consumers
+        a means to travel emission free with India's largest fleet of all
+        electric cabs.
+      </p>
+      <p>The people who make history are the ones who not only give their life to their career but also give their career a new life. When the career is that of a poet, every step is a risk. Vikas Bansal is one such poet who has gifted himself an era of such a popularity which other poets cant’t even dream of. It has been possible only because he possesses the courage, wit and perseverance required to tame one’s destiny. The beginning of his poetic career was nothing short of a blind aim. He did all this to dedicate himself entirely to literature and rest is history. It has been more than a decade of his professional life as a poet and his charm is only increasing with each passing second. His most celebrated couplet for Amitabh bachchan "102 knock out" made him the heartthrob of the youth and established him as the most renowned and celebrated Indian poet. His grip over poems written for Amitabh, flavoured with his wit makes him stand apart but is not merely confined to it. The treasures that his pen has yielded cover wide range of notions viz., social issues, atrocities against women and women empowerment, philosophies of life and also those brimming with patriotic fervor. Collectively speaking, his poems are a mirror to society.  Few of his poems has also been recorded as songs encapsulated in Amitabh Bachchan movies and albums.  He has broken the stereotypes and has not merely confined himself to writing poems and stage shows. He is also active in social media, constantly writing and commenting on the happenings in the society. His achievements make him incredible and he stands unrivalled since years. Hindi literature owes a lot to him for writing a new saga in the field of poetry.</p>
     </section>
     <footer id="footer"></footer>
     <script
