--- a/contact.html
+++ b/contact.html
@@ -65,16 +65,16 @@
         <div class="social-container">
           <ul class="social-icons">
             <li>
-              <a href="#"><i class="fa fa-twitter"></i></a>
+              <a target="_blank"  href="#"><i class="fa fa-twitter"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fa fa-facebook"></i></a>
+              <a target="_blank"  href="#"><i class="fa fa-facebook"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fa fa-youtube"></i></a>
+              <a target="_blank" href="https://www.youtube.com/@mickybansal75"><i class="fa fa-youtube"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fa fa-linkedin"></i></a>
+              <a  target="_blank"  href="#"><i class="fa fa-linkedin"></i></a>
             </li>
           </ul>
         </div>
