--- a/press.html
+++ b/press.html
@@ -31,6 +31,70 @@
     <section class="banner">
       <img src="assets/images/press_banner.jpg" alt="contact_banner" />
     </section>
+    <section class="aticles">
+      <iframe
+        height="560"
+        src="https://www.jagran.com/delhi/new-delhi-city-ncr-poem-on-kbc-season-10-by-vikas-bansal-18387361.html"
+        frameborder="0"
+        scrolling="yes"
+        allowfullscreen
+      >
+      </iframe>
+      <iframe
+        height="560"
+        src="https://hindi.latestly.com/india/politics/lok-sabha-elections-2019-mechanical-engineer-vikas-bansal-is-inspiring-people-to-vote-by-poetry-181773.html"
+        frameborder="0"
+        scrolling="yes"
+        allowfullscreen
+      >
+      </iframe>
+    </section>
+    <section class="videos">
+      <iframe
+        src="https://www.youtube-nocookie.com/embed/v4CeRFcVqto?controls=0&amp;start=2048&end=2335"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe>
+      <iframe
+        src="https://www.youtube-nocookie.com/embed/1eCqV1_7iQ4?start=07"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe>
+      <!-- <iframe
+        src="assets/videos/videoplayback (1).mp4"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; muted; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe>
+      <iframe
+        src="assets/videos/videoplayback (2).mp4"
+      
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe> -->
+    </section>
+    <section class="images">
+      <img src="assets/images/press_1.jpg" alt="press_1">
+      <img src="assets/images/press_2.jpg" alt="press_2">
+      <img src="assets/images/press_3.jpg" alt="press_3">
+      <img src="assets/images/press_4.jpg" alt="press_4">
+      <img src="assets/images/press_5.jpg" alt="press_5">
+      <img src="assets/images/press_6.jpg" alt="press_6">
+      <img src="assets/images/press_7.jpg" alt="press_7">
+      <img src="assets/images/press_8.jpg" alt="press_8">
+      <img src="assets/images/press_9.jpg" alt="press_9">
+      <img src="assets/images/press_10.jpg" alt="press_10">
+      <img src="assets/images/press_11.jpg" alt="press_11">
+      <img src="assets/images/press_12.jpg" alt="press_12">
+      <img src="assets/images/press_13.jpg" alt="press_13">
+    </section>
     <footer id="footer"></footer>
     <script
       src="https://kit.fontawesome.com/2f354f7b13.js"
