--- a/books.html
+++ b/books.html
@@ -30,7 +30,7 @@
     <header id="navbar"></header>
     <section class="banner">
       <img
-        style="aspect-ratio: 3/1"
+        style="aspect-ratio: 3/1.3"
         src="assets/images/books_banner.jpg"
         alt="banner"
       />
@@ -43,7 +43,7 @@
       <main class="page-content">
         <div class="card">
           <div class="content">
-            <h2 class="title">Badal</h2>
+            <h2 class="title">Badla</h2>
             <p class="copy">
               वह मूर्ख होता है जोह सिर्फ सच को ही जानता है ...<br />
               और सच और झूठ के फर्क को नहीं जानता है
@@ -102,8 +102,23 @@
             <a href="/book-details.html?id=7" class="btn">Read Book</a>
           </div>
         </div>
+        <div class="card">
+          <div class="content">
+            <h2 class="title">Chehre</h2>
+            <p class="copy">It's the desert you've always dreamed of</p>
+            <a href="/book-details.html?id=8" class="btn">Read Book</a>
+          </div>
+        </div>
+        <div class="card">
+          <div class="content">
+            <h2 class="title">Jasbaton Ka Ghar</h2>
+            <p class="copy">It's the desert you've always dreamed of</p>
+            <a href="/book-details.html?id=9" class="btn">Read Book</a>
+          </div>
+        </div>
       </main>
     </section>
+   
     <footer id="footer"></footer>
     <script
       src="https://kit.fontawesome.com/2f354f7b13.js"
