--- a/contact.html
+++ b/contact.html
@@ -1,161 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact | Vikas bansal</title>
-    <link rel="icon" href="assets/images/vikas_bansal_logo.png" />
 
-    <!-- CSS only -->
-    <link rel="stylesheet" href="styles/contact.css" />
-    <link rel="stylesheet" href="styles/style.css" />
-    <!-- Import's Script -->
-    <script type="module">
-      import { navbar } from "./components/navbar.js";
-      import { loader } from "./components/loader.js";
-      import { footer } from "./components/footer.js";
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Contact | Vikas bansal</title>
+  <link rel="icon" href="assets/images/vikas_bansal_logo.png" />
 
-      let header = document.getElementById("navbar");
-      header.innerHTML = navbar();
+  <!-- CSS only -->
+  <link rel="stylesheet" href="styles/contact.css" />
+  <link rel="stylesheet" href="styles/style.css" />
+  <!-- Import's Script -->
+  <script type="module">
+    import { navbar } from "./components/navbar.js";
+    import { loader } from "./components/loader.js";
+    import { footer } from "./components/footer.js";
 
-      let loaderComponent = document.querySelector(".loader_wrapper");
-      loaderComponent.innerHTML = loader();
+    let header = document.getElementById("navbar");
+    header.innerHTML = navbar();
 
-      let footerComponent = document.getElementById("footer");
-      footerComponent.innerHTML = footer();
-    </script>
-  </head>
-  <body onload="activeTab()">
-    <section class="loader_wrapper"></section>
-    <header id="navbar"></header>
-    <section class="banner">
-      <img src="assets/images/contact_banner.jpg" alt="contact_banner" />
-    </section>
-    <section class="contact">
-      <div class="info">
-        <div class="info_templete">
-          <div class="message">
-            Have a question about inviting Vikas to do a Keynote or a
-            Workshop?<br />
-            Just fill out the form below and we will get back to you within 48
-            hours. <br />
-            If your query is urgent, you can also call or e-mail us :
-          </div>
+    let loaderComponent = document.querySelector(".loader_wrapper");
+    loaderComponent.innerHTML = loader();
 
-          <br />
-          <div>
-            <span class="icon_tag"
-              ><i class="fa-solid fa-location-arrow"></i
-            ></span>
-            <span class="icon_result">India</span>
-          </div>
-          <br />
-          <div>
-            <span class="icon_tag"><i class="fa-solid fa-phone"></i></span>
-            <span class="icon_result">+91 1234567890</span>
-          </div>
-          <br />
-          <div>
-            <span class="icon_tag"><i class="fa-solid fa-at"></i></span>
-            <span class="icon_result">mypersonal@email.com</span>
-          </div>
-          <br />
+    let footerComponent = document.getElementById("footer");
+    footerComponent.innerHTML = footer();
+  </script>
+</head>
+
+<body onload="activeTab()">
+  <section class="loader_wrapper"></section>
+  <header id="navbar"></header>
+  <section class="banner">
+    <img src="assets/images/contact_banner.jpg" alt="contact_banner" />
+  </section>
+  <section class="contact">
+    <div class="info">
+      <div class="message">
+        <h2>Get in Touch</h2>
+      <div class="info_templete">
+          Have a question about inviting Vikas to do a Keynote or a
+          Workshop?<br />
+          Just fill out the form below and we will get back to you within 48
+          hours. <br />
+          If your query is urgent, you can also call or e-mail us :
         </div>
-        <div class="social-container">
-          <ul class="social-icons">
-            <li>
-              <a target="_blank"  href="#"><i class="fa fa-twitter"></i></a>
-            </li>
-            <li>
-              <a target="_blank"  href="#"><i class="fa fa-facebook"></i></a>
-            </li>
-            <li>
-              <a target="_blank" href="https://www.youtube.com/@mickybansal75"><i class="fa fa-youtube"></i></a>
-            </li>
-            <li>
-              <a  target="_blank"  href="#"><i class="fa fa-linkedin"></i></a>
-            </li>
-          </ul>
+
+        <br />
+        <div class="a-icon">
+          <a  href="https://www.google.com/maps?q=Office+No.+723,+7th+Floor,+DLF+Tower+B,+Jasola+District+Centre,+New+Delhi+-+110025" target="blank"  class="icon_tag"><i class="fa-solid fa-location-arrow"></i></a>
+          <span class="icon_result">Office No. 723, 7th Floor, DLF Tower B,  Jasola District Centre, New Delhi - 110025 (INDIA)</span>
         </div>
+        <br />
+        <div>
+          <span class="icon_tag"><i class="fa-solid fa-phone"></i></span>
+          <span class="icon_result">+91 9873555289</span>
+        </div>
+        <br />
+        <div>
+          <span class="icon_tag"><i class="fa-solid fa-at"></i></span>
+          <span class="icon_result">vikas.bansal@europratik.in</span>
+        </div>
+        <br />
       </div>
-      <div class="form">
-        <form action="" method="post">
-          <div class="row">
-            <div class="form__group">
-              <input
-                type="text"
-                id="f_name"
-                class="form__field"
-                placeholder="Enter First Name"
-                required
-              />
-              <label for="f_name" class="form__label">First Name</label>
-            </div>
-            <div class="form__group">
-              <input
-                type="text"
-                id="l_name"
-                class="form__field"
-                placeholder="Enter Last Name"
-              />
-              <label for="l_name" class="form__label">Last Name</label>
-            </div>
-          </div>
-          <div class="row">
-            <div class="form__group">
-              <input
-                type="email"
-                id="email"
-                class="form__field"
-                placeholder="Enter Email"
-                required
-              />
-              <label for="email" class="form__label">Email</label>
-            </div>
-            <div class="form__group">
-              <input
-                type="number"
-                id="mobile"
-                class="form__field"
-                placeholder="Enter Mobile Number"
-                required
-              />
-              <label for="mobile" class="form__label">Mobile No.</label>
-            </div>
+      <div class="social-container">
+        <ul class="social-icons">
+          <li>
+            <a target="_blank" href="#"><i class="fa fa-twitter"></i></a>
+          </li>
+          <li>
+            <a target="_blank" href="#"><i class="fa fa-facebook"></i></a>
+          </li>
+          <li>
+            <a target="_blank" href="https://www.youtube.com/@mickybansal75"><i class="fa fa-youtube"></i></a>
+          </li>
+          <li>
+            <a target="_blank" href="#"><i class="fa fa-linkedin"></i></a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="form">
+      <form action="" method="post">
+        <div class="row">
+          <div class="form__group">
+            <input type="text" id="f_name" class="form__field" placeholder="Enter First Name" required />
+            <label for="f_name" class="form__label">First Name</label>
           </div>
           <div class="form__group">
-            <input
-              type="text"
-              id="subject"
-              class="form__field"
-              placeholder="Enter Subject"
-              required
-            />
-            <label for="subject" class="form__label">Subject</label>
+            <input type="text" id="l_name" class="form__field" placeholder="Enter Last Name" />
+            <label for="l_name" class="form__label">Last Name</label>
+          </div>
+        </div>
+        <div class="row">
+          <div class="form__group">
+            <input type="email" id="email" class="form__field" placeholder="Enter Email" required />
+            <label for="email" class="form__label">Email</label>
           </div>
           <div class="form__group">
-            <textarea
-              id="message"
-              class="form__field"
-              placeholder="Enter Message"
-              rows="6"
-              required
-            ></textarea>
-            <label for="message" class="form__label">Message</label>
+            <input type="number" id="mobile" class="form__field" placeholder="Enter Mobile Number" required />
+            <label for="mobile" class="form__label">Mobile No.</label>
           </div>
-          <div>
-            <input class="submit_btn" type="submit" />
-          </div>
-        </form>
-      </div>
-    </section>
-    <footer id="footer"></footer>
-    <script
-      src="https://kit.fontawesome.com/2f354f7b13.js"
-      crossorigin="anonymous"
-    ></script>
-    <script src="scripts/script.js"></script>
-    <script src="scripts/contact.js"></script>
-  </body>
+        </div>
+        <div class="form__group">
+          <input type="text" id="subject" class="form__field" placeholder="Enter Subject" required />
+          <label for="subject" class="form__label">Subject</label>
+        </div>
+        <div class="form__group">
+          <textarea id="message" class="form__field" placeholder="Enter Message" rows="6" required></textarea>
+          <label for="message" class="form__label">Message</label>
+        </div>
+        <div>
+          <input class="submit_btn" type="submit" />
+        </div>
+      </form>
+    </div>
+  </section>
+  <footer id="footer"></footer>
+  <script src="https://kit.fontawesome.com/2f354f7b13.js" crossorigin="anonymous"></script>
+  <script src="scripts/script.js"></script>
+  <script src="scripts/contact.js"></script>
+</body>
+
 </html>
