--- a/press.html
+++ b/press.html
@@ -1,106 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Press | Vikas bansal</title>
-    <link rel="icon" href="assets/images/vikas_bansal_logo.png" />
-    <!-- CSS only -->
-    <link rel="stylesheet" href="styles/press.css" />
-    <link rel="stylesheet" href="styles/style.css" />
-    <!-- Import's Script -->
-    <script type="module">
-      import { navbar } from "./components/navbar.js";
-      import { loader } from "./components/loader.js";
-      import { footer } from "./components/footer.js";
 
-      let header = document.getElementById("navbar");
-      header.innerHTML = navbar();
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Press | Vikas bansal</title>
+  <link rel="icon" href="assets/images/vikas_bansal_logo.png" />
+  <!-- CSS only -->
+  <link rel="stylesheet" href="styles/press.css" />
+  <link rel="stylesheet" href="styles/style.css" />
+  <!-- Import's Script -->
+  <script type="module">
+    import { navbar } from "./components/navbar.js";
+    import { loader } from "./components/loader.js";
+    import { footer } from "./components/footer.js";
 
-      let loaderComponent = document.querySelector(".loader_wrapper");
-      loaderComponent.innerHTML = loader();
+    let header = document.getElementById("navbar");
+    header.innerHTML = navbar();
 
-      let footerComponent = document.getElementById("footer");
-      footerComponent.innerHTML = footer();
-    </script>
-  </head>
-  <body onload="activeTab()">
-    <section class="loader_wrapper"></section>
-    <header id="navbar"></header>
-    <section class="banner">
-      <img src="assets/images/press_banner.jpg" alt="contact_banner" />
-    </section>
-    <section class="aticles">
-      <iframe
-        height="560"
-        src="https://www.jagran.com/delhi/new-delhi-city-ncr-poem-on-kbc-season-10-by-vikas-bansal-18387361.html"
-        frameborder="0"
-        scrolling="yes"
-        allowfullscreen
-      >
-      </iframe>
-      <iframe
-        height="560"
-        src="https://hindi.latestly.com/india/politics/lok-sabha-elections-2019-mechanical-engineer-vikas-bansal-is-inspiring-people-to-vote-by-poetry-181773.html"
-        frameborder="0"
-        scrolling="yes"
-        allowfullscreen
-      >
-      </iframe>
-    </section>
-    <section class="videos">
-      <iframe
-        src="https://www.youtube-nocookie.com/embed/v4CeRFcVqto?controls=0&amp;start=2048&end=2335"
-        title="YouTube video player"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen
-      ></iframe>
-      <iframe
-        src="https://www.youtube-nocookie.com/embed/1eCqV1_7iQ4?start=07"
-        title="YouTube video player"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen
-      ></iframe>
-      <!-- <iframe
-        src="assets/videos/videoplayback (1).mp4"
-        title="YouTube video player"
-        frameborder="0"
-        allow="accelerometer; muted; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen
-      ></iframe>
-      <iframe
-        src="assets/videos/videoplayback (2).mp4"
-      
-        title="YouTube video player"
-        frameborder="0"
-        allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen
-      ></iframe> -->
-    </section>
-    <section class="images">
-      <img src="assets/images/press_1.jpg" alt="press_1">
-      <img src="assets/images/press_2.jpg" alt="press_2">
-      <img src="assets/images/press_3.jpg" alt="press_3">
-      <img src="assets/images/press_4.jpg" alt="press_4">
-      <img src="assets/images/press_5.jpg" alt="press_5">
-      <img src="assets/images/press_6.jpg" alt="press_6">
-      <img src="assets/images/press_7.jpg" alt="press_7">
-      <img src="assets/images/press_8.jpg" alt="press_8">
-      <img src="assets/images/press_9.jpg" alt="press_9">
-      <img src="assets/images/press_10.jpg" alt="press_10">
-      <img src="assets/images/press_11.jpg" alt="press_11">
-      <img src="assets/images/press_12.jpg" alt="press_12">
-      <img src="assets/images/press_13.jpg" alt="press_13">
-    </section>
-    <footer id="footer"></footer>
-    <script
-      src="https://kit.fontawesome.com/2f354f7b13.js"
-      crossorigin="anonymous"
-    ></script>
-    <script src="scripts/script.js"></script>
-    <script src="scripts/press.js"></script>
-  </body>
+    let loaderComponent = document.querySelector(".loader_wrapper");
+    loaderComponent.innerHTML = loader();
+
+    let footerComponent = document.getElementById("footer");
+    footerComponent.innerHTML = footer();
+  </script>
+</head>
+
+<body onload="activeTab()">
+  <section class="loader_wrapper"></section>
+  <header id="navbar"></header>
+
+  <section class="banner">
+    <img src="assets/images/press_banner.jpg" alt="contact_banner" />
+  </section>
+  <div class="three">
+    <h1>Articles</h1>
+  </div>
+  <section class="aticles">
+
+    <main class="page-content">
+      <div class="card">
+        <div class="content">
+          <h2 class="title">On Jagran</h2>
+          <p class="copy">
+            KBC में भी गूंजेगी विकास की कविता, अमिताभ बच्चन भी हैं इनके मुरी
+          </p>
+          <a target="_blank"
+            href="https://www.jagran.com/delhi/new-delhi-city-ncr-poem-on-kbc-season-10-by-vikas-bansal-18387361.html"
+            class="btn">Read Article</a>
+        </div>
+      </div>
+      <div class="card">
+        <div class="content">
+          <h2 class="title">On Latestly</h2>
+          <p class="copy">
+            मैकेनिकल इंजीनियर विकास बंसल कविता सुनाकर लोगों को दे रहे हैं वोट करने की प्रेरणा
+          </p>
+          <a target="_blank"
+            href="https://hindi.latestly.com/india/politics/lok-sabha-elections-2019-mechanical-engineer-vikas-bansal-is-inspiring-people-to-vote-by-poetry-181773.html"
+            class="btn">Read Article</a>
+        </div>
+      </div>
+    </main>
+  </section>
+
+  <div class="three">
+    <h1>Videos</h1>
+  </div>
+  <section class="videos">
+
+    <iframe src="https://www.youtube-nocookie.com/embed/v4CeRFcVqto?controls=0&amp;start=2048&end=2335"
+      title="YouTube video player" frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen></iframe>
+    <iframe src="https://www.youtube-nocookie.com/embed/1eCqV1_7iQ4?start=07" title="YouTube video player"
+      frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/y6oUSxiYE_U" title="YouTube video player" frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/JbXaKCudc-s" title="YouTube video player" frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen></iframe>
+  </section>
+  <div class="three">
+    <h1>Images</h1>
+  </div>
+  <section class="images">
+
+    <img src="assets/images/press_1.jpg" alt="press_1">
+    <img src="assets/images/press_2.jpg" alt="press_2">
+    <img src="assets/images/press_3.jpg" alt="press_3">
+    <img src="assets/images/press_4.jpg" alt="press_4">
+    <img src="assets/images/press_5.jpg" alt="press_5">
+    <img src="assets/images/press_6.jpg" alt="press_6">
+    <img src="assets/images/press_7.jpg" alt="press_7">
+    <img src="assets/images/press_8.jpg" alt="press_8">
+    <img src="assets/images/press_9.jpg" alt="press_9">
+    <img src="assets/images/press_10.jpg" alt="press_10">
+    <img src="assets/images/press_11.jpg" alt="press_11">
+    <img src="assets/images/press_12.jpg" alt="press_12">
+    <img src="assets/images/press_13.jpg" alt="press_13">
+  </section>
+  <div class="show">
+    <div class="overlay"></div>
+    <div class="img-show">
+      <span>X</span>
+      <img src="">
+    </div>
+  </div>
+  <footer id="footer"></footer>
+  <script src="https://kit.fontawesome.com/2f354f7b13.js" crossorigin="anonymous"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="scripts/script.js"></script>
+  <script src="scripts/press.js"></script>
+</body>
+
 </html>
