--- a/poems.html
+++ b/poems.html
@@ -42,34 +42,35 @@
     </div>
     <section class="poems">
 
-        <img src="assets/images/poems/Dream, Way and Saving.jpg" alt="press_1">
+        <img src="assets/images/poems/Dream, Way and Saving.jpeg" alt="press_1">
         <img src="assets/images/poems/PURANI YAADEIN.jpg" alt="press_2">
-        <img src="assets/images/poems/आज़ाद ह पर आज़ाद कहाँ.jpg" alt="press_3">
-        <img src="assets/images/poems/आज़ादी की लो.jpg" alt="press_4">
-        <img src="assets/images/poems/आज़ादी फिर जावन हो.jpg" alt="press_5">
-        <img src="assets/images/poems/आज़ादी में चाहता हु.jpg" alt="press_6">
-        <img src="assets/images/poems/आज़ादी ये रोज मनाने वाली है.jpg" alt="press_7">
-        <img src="assets/images/poems/आज़ादी है हवाओ में.jpg" alt="press_8">
-        <img src="assets/images/poems/करे गलती पर न मांगे माफ़ी हम.jpg" alt="press_9">
-        <img src="assets/images/poems/किसे शुद्ध माने किसे विशुद्ध .jpg" alt="press_10">
-        <img src="assets/images/poems/कुछ किया नायब तो.jpg" alt="press_11">
-        <img src="assets/images/poems/घर घर तिरंगा.jpg" alt="press_12">
-        <img src="assets/images/poems/चलो जश्न आज़ादी का मनाए.jpg" alt="press_13">
-        <img src="assets/images/poems/जो होता रहा वो हे हो रहा आज है.jpg" alt="press_13">
-        <img src="assets/images/poems/में रूठ गया  POEM.jpg" alt="press_13">
-        <img src="assets/images/poems/ये कैसी आज़ादी ह.jpg" alt="press_13">
-        <img src="assets/images/poems/रंग दे मेरा बसंती चोला.jpg" alt="press_13">
-        <img src="assets/images/poems/हमें बदलने की नहीं.jpg" alt="press_13">
-        <img src="assets/images/poems/श्रीमती शुष्मा स्वराज.jpg" alt="press_13">
-        <img src="assets/images/poems/सभी देश वासियों को.jpg" alt="press_13">
+        <img src="assets/images/poems/करे गलती पर न मांगे माफ़ी हम.jpg" alt="press_3">
+        <img src="assets/images/poems/जो होता रहा वो हे हो रहा आज है.jpg" alt="press_4">
+        <img src="assets/images/poems/किसे शुद्ध माने किसे विशुद्ध .jpg" alt="press_4">
+        <img src="assets/images/poems/में रूठ गया  POEM.jpg" alt="press_5">
+        <img src="assets/images/poems/आज़ाद ह पर आज़ाद कहाँ.jpg" alt="press_6">
+        <img src="assets/images/poems/आज़ादी की लो.jpg" alt="press_7">
+        <img src="assets/images/poems/आज़ादी फिर जावन हो.jpg" alt="press_8">
+        <img src="assets/images/poems/आज़ादी में चाहता हु.jpg" alt="press_9">
+        <img src="assets/images/poems/आज़ादी ये रोज मनाने वाली है.jpg" alt="press_10">
+        <img src="assets/images/poems/आज़ादी है हवाओ में.jpg" alt="press_11">
+        <img src="assets/images/poems/चलो जश्न आज़ादी का मनाए.jpg" alt="press_12">
+        <img src="assets/images/poems/कुछ किया नायब तो.jpg" alt="press_13">
+        <img src="assets/images/poems/घर घर तिरंगा.jpg" alt="press_14">
+        <img src="assets/images/poems/ये कैसी आज़ादी ह.jpg" alt="press_15">
+        <img src="assets/images/poems/रंग दे मेरा बसंती चोला.jpg" alt="press_16">
+        <img src="assets/images/poems/हमें बदलने की नहीं.jpg" alt="press_17">
+        <img src="assets/images/poems/श्रीमती शुष्मा स्वराज.jpg" alt="press_18">
+        <img src="assets/images/poems/सभी देश वासियों को.jpg" alt="press_19">
+        <div></div>
     </section>
     <div class="show">
         <div class="overlay"></div>
         <div class="img-show">
-          <span>X</span>
-          <img src="">
+            <span>X</span>
+            <img src="">
         </div>
-      </div>
+    </div>
     <footer id="footer"></footer>
     <script src="https://kit.fontawesome.com/2f354f7b13.js" crossorigin="anonymous"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
