map added and optimised

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
   <header id="navbar"></header>
   <section class="banner">
     <div>
-      <div> <img src="../assets/images/mr_bansal.png" alt="mr bansal"></div>
+      <div> <img src="../assets/images/mr_bansal.jpg" alt="mr bansal"></div>
       <div>
         <div>
           <div class="one">
@@ -108,30 +108,37 @@
       <input type="checkbox" class="read-more-state jcf-hidden" id="following-content">
       <p class="read-more-wrap">
         The people who make history are the ones who not only give their life to their career but also give
-      their career
-      a new life. When the career is that of a poet, every step is a risk. Vikas Bansal is one such poet who has gifted
-      himself an era of such a popularity which other poets cant’t even dream of. It has been possible only because he
-      possesses the courage, wit and perseverance required to tame one’s destiny. The beginning of his poetic career was
-      nothing short of a blind aim. He did all this to dedicate himself entirely to literature and rest is history. 
-      </p>  
-      
+        their career
+        a new life. When the career is that of a poet, every step is a risk. Vikas Bansal is one such poet who has
+        gifted
+        himself an era of such a popularity which other poets cant’t even dream of. It has been possible only because he
+        possesses the courage, wit and perseverance required to tame one’s destiny. The beginning of his poetic career
+        was
+        nothing short of a blind aim. He did all this to dedicate himself entirely to literature and rest is history.
+      </p>
+
       <p class="read-more-target">
         It
-      has been more than a decade of his professional life as a poet and his charm is only increasing with each passing
-      second. His most celebrated couplet for Amitabh bachchan "102 knock out" made him the heartthrob of the youth and
-      established him as the most renowned and celebrated Indian poet. His grip over poems written for Amitabh,
-      flavoured with his wit makes him stand apart but is not merely confined to it. The treasures that his pen has
-      yielded cover wide range of notions viz., social issues, atrocities against women and women empowerment,
-      philosophies of life and also those brimming with patriotic fervor. Collectively speaking, his poems are a mirror
-      to society. Few of his poems has also been recorded as songs encapsulated in Amitabh Bachchan movies and albums.
-      He has broken the stereotypes and has not merely confined himself to writing poems and stage shows. He is also
-      active in social media, constantly writing and commenting on the happenings in the society. His achievements make
-      him incredible and he stands unrivalled since years. Hindi literature owes a lot to him for writing a new saga in
-      the field of poetry.
+        has been more than a decade of his professional life as a poet and his charm is only increasing with each
+        passing
+        second. His most celebrated couplet for Amitabh bachchan "102 knock out" made him the heartthrob of the youth
+        and
+        established him as the most renowned and celebrated Indian poet. His grip over poems written for Amitabh,
+        flavoured with his wit makes him stand apart but is not merely confined to it. The treasures that his pen has
+        yielded cover wide range of notions viz., social issues, atrocities against women and women empowerment,
+        philosophies of life and also those brimming with patriotic fervor. Collectively speaking, his poems are a
+        mirror
+        to society. Few of his poems has also been recorded as songs encapsulated in Amitabh Bachchan movies and albums.
+        He has broken the stereotypes and has not merely confined himself to writing poems and stage shows. He is also
+        active in social media, constantly writing and commenting on the happenings in the society. His achievements
+        make
+        him incredible and he stands unrivalled since years. Hindi literature owes a lot to him for writing a new saga
+        in
+        the field of poetry.
       </p>
       <label for="following-content" class="read-more-trigger"></label>
     </blockquote>
-  
+
   </section>
 
 
