--- a/index.html
+++ b/index.html
@@ -135,6 +135,12 @@
             </div>
           </div>
           <div class="gallery__photo">
+            <img src="assets/images/11.jpg" alt="" />
+            <div class="gallery__fade">
+              <i class="gallery__icon" data-feather="image"></i>
+            </div>
+          </div>
+          <div class="gallery__photo">
             <img src="assets/images/21.jpg" alt="" />
             <div class="gallery__fade">
               <i class="gallery__icon" data-feather="image"></i>
