--- a/poems.html
+++ b/poems.html
@@ -31,7 +31,7 @@
     <section class="loader_wrapper"></section>
     <header id="navbar"></header>
     <section class="banner">
-        <img style="aspect-ratio: 2/0.9" src="assets/images/poems_banner.jpeg" alt="banner" />
+        <img style="aspect-ratio: 2/0.9" src="assets/images/poems_banner.jpg" alt="banner" />
     </section>
 
     <div class="three">
@@ -42,11 +42,11 @@
     </div>
     <section class="poems">
 
-        <img src="assets/images/poems/Dream, Way and Saving.jpeg" alt="press_1">
+        <img src="assets/images/poems/Dream, Way and Saving.jpg" alt="press_1">
         <img src="assets/images/poems/PURANI YAADEIN.jpg" alt="press_2">
         <img src="assets/images/poems/करे गलती पर न मांगे माफ़ी हम.jpg" alt="press_3">
         <img src="assets/images/poems/जो होता रहा वो हे हो रहा आज है.jpg" alt="press_4">
-        <img src="assets/images/poems/किसे शुद्ध माने किसे विशुद्ध .jpg" alt="press_4">
+        <img src="assets/images/poems/किसे शुद्ध माने किसे विशुद्ध.jpg" alt="press_4">
         <img src="assets/images/poems/में रूठ गया  POEM.jpg" alt="press_5">
         <img src="assets/images/poems/आज़ाद ह पर आज़ाद कहाँ.jpg" alt="press_6">
         <img src="assets/images/poems/आज़ादी की लो.jpg" alt="press_7">
